apps/base/issuary/issuary.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyauth-service
  namespace: tinyauth-system
spec:
  selector:
    app: tinyauth
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
