apps/base/issuary/issuary.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: issuary-ingress-route
  namespace: issuary-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
    - cloudflare
  routes:
    - match: Host(`auth.winetree94.com`)
      kind: Rule
      services:
        - name: issuary-service
          port: 8080
  tls:
    secretName: letsencrypt-cert
