apps/base/issuary/issuary.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-issuary
  namespace: issuary-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: issuary-system
        app: issuary
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: traefik-external-system
              app.kubernetes.io/name: traefik
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: monitoring-system
              app.kubernetes.io/name: grafana
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: issuary-system
              cnpg.io/cluster: issuary-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: issuary-system
        cnpg.io/cluster: issuary-database-cluster
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: issuary-system
              app: issuary
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: cnpg-system
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
              - port: "9187"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: issuary-system
              cnpg.io/cluster: issuary-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: issuary-system
              cnpg.io/cluster: issuary-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: traefik-system
              app.kubernetes.io/name: traefik
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
